infra/kustomize/overlays/alpha/yamls/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - alpha.api.democracy-app.de
        - alpha.democracy-app.de
        - alpha.api.bundestag.io
        - alpha.admin.bundestag.io
        - alpha.dip.bundestag.io
      secretName: democracy-alpha-tls
  rules:
    - host: alpha.api.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: democracy-api-srv
                port:
                  number: 3000
    - host: alpha.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: democracy-app-srv
                port:
                  number: 3000
    - host: alpha.api.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-srv
                port:
                  number: 3100
    - host: alpha.admin.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-admin-srv
                port:
                  number: 3000
    - host: alpha.dip.bundestag.io
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: bundestagio-dip-srv
                port:
                  number: 3101
